--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.9'
 services:
   apache:
     image: httpd:latest
-    container_name: my-apache-app
+    container_name: meu-app-apache
     ports:
     - '80:80'
     volumes:
-    - ./website:/usr/local/apache2/htdocs
+    - ./site-desadio:/usr/local/apache2/htdocs
